fix: footer icon alignment on mobile

--- a/_css/components.css
+++ b/_css/components.css
@@ -1328,6 +1328,10 @@
   margin-right: -3px;
   width: 38px;
   height: 38px;
+
+  @media (max-width: calc(1000 / 16 * 1rem)) {
+    margin-left: -5px;
+  }
 }
 
 .footer__icon--github {
@@ -1335,4 +1339,8 @@
   top: -2px;
   width: 32px;
   height: 32px;
+
+  @media (max-width: calc(1000 / 16 * 1rem)) {
+    margin-left: -3px;
+  }
 }
